[package]
name = "parrot-rs"
version = "0.1.0"
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arsdk-rs = {git = "https://github.com/AeroRust/arsdk-rs", branch = "unknown-frames"}
scroll = "0.10"
